[package]
name = "nextdoor"
version = "0.0.2"
authors = ["m3id"]
edition = "2021"
description = "Websocket client Router"
repository = "https://github.com/m3idnotfree/nextdoor"
license = "MIT"
keywords = ["websocket", "router"]


[features]
default = []
client = ["futures-util"]

[dependencies]
bytes = "1.9.0"
futures-util = { version = "0.3.31", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio-tungstenite = "0.24.0"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
