[package]
name = "nextdoor"
version = "0.0.3"
authors = ["m3id"]
edition = "2021"
description = "Websocket client Router"
repository = "https://github.com/m3idnotfree/nextdoor"
license = "MIT"
keywords = ["websocket", "router"]


[features]
default = []
client = ["futures-util", "tokio"]

[dependencies]
bytes = "1.9.0"
futures-util = { version = "0.3.31", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio-tungstenite = { version = "0.24.0", features = [
  "rustls-tls-webpki-roots",
] }
tracing = "0.1.41"
tokio = { version = "1.41.1", optional = true, features = [
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "macros",
] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
